<package format="2">
    <name>lego_loam</name>
    <version>1.0.0</version>
    <description>LeGO-LOAM from IROS 2018</description>

    <maintainer email="xxx@xxx.xxx">Tixiao Shan</maintainer>

    <license>BSD</license>

    <author>Tixiao Shan</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>roscpp</depend>
    <depend>tf</depend>

    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>

    <build_depend>gtsam</build_depend>
    <exec_depend>gtsam</exec_depend>
</package>
